syntax = "proto3";

package ltproto.peer2peer;

message ConfirmConnection
{
    int64 device_id = 1;
}