syntax = "proto3";

package ltproto.client2worker;

message MouseEvent
{
    enum KeyFlag
    {
        LeftDown = 0;
        LeftUp = 1;
        RightDown = 2;
        RightUp = 3;
        MidDown = 4;
        MidUp = 5;
        X1Down = 6;
        X1Up = 7;
        X2Down = 8;
        X2Up = 9;
    }
    optional KeyFlag key_falg = 1;
    optional float x = 2;
    optional float y = 3;
    optional int32 delta_x = 4;
    optional int32 delta_y = 5;
    optional int32 delta_z = 6;
}