syntax = "proto3";

package ltproto.client2worker;

message RequestKeyframe
{
}
