syntax = "proto3";

package ltproto.peer2peer;

message ControllerResponse
{
    uint32 gamepad_index = 1;
    uint32 large_motor = 2;
    uint32 small_moror = 3;
}