syntax = "proto3";

package ltproto.peer2peer;

message StartTransmissionAck
{
	enum ErrCode
    {
        Success = 0;
        AuthFailed = 1;
        HostFailed = 2;
    }
	ErrCode err_code = 1;
}