syntax = "proto3";

package ltproto.peer2peer;

message StopTransmission
{

}