syntax = "proto3";

package ltproto.peer2peer;


message TimeSync
{
	int64 t0 = 1;
	int64 t1 = 2;
	int64 t2 = 3;
}
