syntax = "proto3";

package ltproto.server;
option java_package = "cn.lanthing.ltproto.server";
option java_outer_classname = "AllocateDeviceIDAckProto";

message AllocateDeviceIDAck
{
	enum ErrCode
	{
		Success = 0;
		Failed = 1;
	}
	ErrCode err_code = 1;
	int64 device_id = 2;
}