syntax = "proto3";

package ltproto.server;
option java_package = "cn.lanthing.ltproto.server";
option java_outer_classname = "CloseConnectionProto";

message CloseConnection
{
    enum Reason
    {
        ClientClose = 0;
        HostClose = 1;
        TimeoutClose = 2;
    }
    Reason reason = 1;
    string room_id = 2;
}