syntax = "proto3";

package ltproto.server;
option java_package = "cn.lanthing.ltproto.server";
option java_outer_classname = "LoginDeviceProto";

message LoginDevice
{
	int64 device_id = 1;
	string session_id = 2;
	bool allow_control = 3;
}
