syntax = "proto3";

package ltproto.server;
option java_package = "cn.lanthing.ltproto.server";
option java_outer_classname = "LoginUserProto";

message LoginUser
{
    optional string username = 1;
    optional string password = 2;
    optional string cookie = 3;
}
