syntax = "proto3";

import "ltproto/error_code.proto";

package ltproto.server;
option java_package = "cn.lanthing.ltproto.server";
option java_outer_classname = "LoginUserAckProto";

message LoginUserAck
{
    ltproto.ErrorCode err_code = 1;
}