syntax = "proto3";

import "ltproto/common/streaming_params.proto";
import "ltproto/server/connection_type.proto";
import "ltproto/common/transport_type.proto";

package ltproto.server;
option java_package = "cn.lanthing.ltproto.server";
option java_outer_classname = "RequestConnectionProto";


// 主控端发给服务器
message RequestConnection
{
    ConnectionType conn_type = 1;
    int64 device_id = 2;
    optional ltproto.common.StreamingParams streaming_params = 3;
    string access_token = 4;
    int64 request_id = 5;
    string cookie = 6;
    int64 client_version = 7;
    int64 required_version = 8;
    ltproto.common.TransportType transport_type = 9;
}
