syntax = "proto3";

import "ltproto/peer2peer/streaming_params.proto";

package ltproto.server;
option java_package = "cn.lanthing.ltproto.server";
option java_outer_classname = "RequestConnectionAckProto";

// 服务器回给主控端
message RequestConnectionAck
{
    enum ErrCode
    {
        Success = 0;
        Failed = 1;
    }
    ErrCode err_code = 1;
    int64 device_id = 2;
    string signaling_addr = 3;
    int32 signaling_port = 4;
    string room_id = 5;
    string client_id = 6;
    string auth_token = 7;
    optional ltproto.peer2peer.StreamingParams streaming_params = 8;
    string p2p_username = 9;
    string p2p_password = 10;
}