syntax = "proto3";

package ltproto.service2app;

message ConfirmConnectionAck
{
    enum ConfirmResult
    {
        Reject = 0;
        Agree = 1;
        AgreeNextTime = 2;
    }
    int64 device_id = 1;
    ConfirmResult result = 2;
}