syntax = "proto3";

import "ltproto/error_code.proto";

package ltproto.signaling;
option java_package = "cn.lanthing.ltproto.signaling";
option java_outer_classname = "JoinRoomAckProto";

message JoinRoomAck
{
	ErrorCode err_code = 1;
}