syntax = "proto3";

package ltproto.signaling;
option java_package = "cn.lanthing.ltproto.signaling";
option java_outer_classname = "SignalingMessageAckProto";

message SignalingMessageAck
{
    enum ErrCode
    {
        Success = 0;
        NotOnline = 1;
    }
    ErrCode err_code = 1;
}