syntax = "proto3";

package ltproto.worker2service;

message StartWorking
{
}